<package>
 <name>ras_lab1_distance_sensor</name>
  <version>0.1.0</version>
  <description>
    Model and test nodes of distance sensor for lab1.
  </description>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ras_lab1_distance_sensor</url>

  <author email="fevb@kth.se">Francisco Vina</author>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
