<package>
 <name>ras_lab1_world</name>
  <version>0.1.0</version>
  <description>
    Node that generates the environment for lab1.
  </description>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ras_lab1_world</url>

  <author email="raambrus@kth.se">Rares Ambrus</author>
  <maintainer email="raambrus@kth.se">Rares Ambrus</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
